# R-Type-Server

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build.ps1  build.sh  fetch.sh  r-type_server.cfg
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/workflows/: check_composition.yml
core/include/: GetConfig.hpp  ParseArgs.hpp  SetSigHandlers.hpp  StartServer.hpp
core/src/: GetConfig.cpp  ParseArgs.cpp  SetSigHandlers.cpp  StartServer.cpp  main.cpp
network/: CMakeLists.txt
network/api/: Version.cpp
network/api/include/: Clock.hpp  Interfaces.hpp  NetworkApi.hpp  NetworkVersion.hpp
network/api/src/: Version.cpp
network/core/include/: Clock.hpp  CoreVersion.hpp  Interfaces.hpp
network/core/src/: Version.cpp
network/include/: NetworkApi.hpp  NetworkVersion.hpp  RTypeNetworkApi.hpp  RTypeNetworkVersion.hpp  RTypePlatfomSpecificDefines.hpp  RTypePlatform.hpp
network/include/RTypeNet/: Accept.hpp  Api.hpp  BufLenLimits.hpp  Clock.hpp  Disconnect.hpp  Interfaces.hpp  Listen.hpp  Poll.hpp  Recv.hpp  Send.hpp  Version.hpp  ssize_t.hpp
network/include/RTypeNet/Core/: ForwardFunction.hpp  Version.hpp
network/include/RTypeNet/Platform/Linux/: Version.hpp
network/include/RTypeNet/Platform/MacOS/: Version.hpp
network/include/RTypeNet/Platform/Windows/: Version.hpp
network/include/RTypeNet/Subplatform/: Accept.hpp  Clock.hpp  Disconnect.hpp  ForwardFunction.hpp  Listen.hpp  Poll.hpp  Recv.hpp  Send.hpp  Version.hpp
network/include/RTypeNet/Subplatform/POSIX/: Version.hpp
network/include/RTypeNet/Utils/: NonCopyable.hpp  Singleton.hpp
network/iocp/include/: IOCPClock.hpp  IOCPVersion.hpp
network/iocp/src/: IOPCImpl.cpp  Version.cpp
network/platform/include/: PlatformVersion.hpp
network/platform/linux/src/: Clock.cpp  Version.cpp
network/platform/macos/src/: Clock.cpp  Version.cpp
network/platform/windows/include/: WindowsVersion.hpp
network/platform/windows/src/: Clock.cpp  Version.cpp
network/posix/include/: POSIXClock.hpp  POSIXVersion.hpp
network/posix/src/: POSIXImpl.cpp  Version.cpp
network/src/Core/: Version.cpp
network/src/Platform/Linux/: Clock.cpp  Disconnect.cpp  Poll.cpp  Recv.cpp  Version.cpp
network/src/Platform/MacOS/: Accept.cpp  Clock.cpp  Listen.cpp  Send.cpp  Version.cpp
network/src/Platform/Windows/: Accept.cpp  Clock.cpp  Disconnect.cpp  Listen.cpp  Poll.cpp  Recv.cpp  Send.cpp  Version.cpp
network/src/Subplatform/POSIX/: Accept.cpp  Clock.cpp  Disconnect.cpp  Listen.cpp  Poll.cpp  Recv.cpp  Send.cpp  Version.cpp
network/subplatform/include/: SubplatformClock.hpp  SubplatformForwardFunction.hpp  SubplatformVersion.hpp
network/subplatform/posix/src/: Clock.cpp  Version.cpp
network/utils/: NonCopyable.hpp  Singleton.hpp
server/: CMakeLists.txt
server/include/RTypeSrv/: Api.hpp  Exception.hpp  GameServer.hpp  Gateway.hpp  Server.hpp  Version.hpp
server/include/RTypeSrv/Utils/: IPToStr.hpp  Logger.hpp  NonCopyable.hpp  Singleton.hpp
server/src/: Exception.cpp  Server.cpp  Version.cpp
server/src/GameServer/: GameServer.cpp  Helpers.cpp  Implementation.cpp  ParsePackets.cpp  Recv.cpp  Send.cpp  TcpGateway.cpp
server/src/Gateway/: Helpers.cpp  Implementation.cpp  ParsePackets.cpp  Recv.cpp  Send.cpp  Server.cpp
server/src/Utils/: IPToStr.cpp
src/: main.cpp
